Fix to dark mode alerts

--- a/resources/css/base/colors.css
+++ b/resources/css/base/colors.css
@@ -44,6 +44,8 @@
     --c-red-500: #FF6056;
     --c-red-50: #ffefee;
     --c-yellow-500: #FEBB2E;
+    --c-yellow-bg-dark: #302B1F;
+    --c-yellow-outline-dark: #685326;
     --c-yellow-50: #fff8ea;
     --c-green-500: #2AC840;
     --c-bg-dark: rgba(255, 255, 255, 0.1);
